re_nombrado, ahora pruebas y bd

--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="laApp">
+<html ng-app="la_App">
 <!-- 
 fecha: 16-09-18
 -->
@@ -42,7 +42,7 @@ fecha: 16-09-18
 <meta name="keywords"
  content="BesTalk, Chat, Voice Chat, Games, Language Exchange, Intercambio de Idiomas, Learn Languages, Language Learning, Learn English, Talk">
 <meta name="description"
- content="When you use BesTalk, you can chat in language rooms as well voice call them in private chats.You can also play word games  being this a amusing way to exchange languages with other BesTalk users around the world.">
+ content="When you use BesTalk, you can chat in language rooms as well voice call them in private chats.You can also play word games  being this an amusing way to exchange languages with other BesTalk users around the world.">
  
 
 <meta property="og:url"
@@ -93,7 +93,7 @@ body{
   margin:0px;
   background-color:white;}
   
-#dvngview{
+#dv_ng_view{
   /*display:flex;
     flex-direction:column;
     align-items:center;*/
@@ -110,7 +110,7 @@ body{
 
  
 
-<div id="dvngview" ng-view></div>
+<div id="dv_ng_view" ng-view></div>
   
  
 
