re_nombrado, en pruebas

--- a/client/directive/edit.html
+++ b/client/directive/edit.html
@@ -313,6 +313,6 @@ About me:<br>
 
 
 <input type="submit"
-       value="Update" ng-click="ediT(user)">
+       value="Update" ng-click="editar_profile(user)">
 
 </form>
