re_nombrado con db, montar y organizar

--- a/client/home/home.html
+++ b/client/home/home.html
@@ -229,15 +229,16 @@ text-decoration:underline;
 <h3>Chat:</h3><br>
 <ul id="ul_chat">
 <li>All language rooms, theme rooms and secret rooms.</li>
-<li>Most commons theme rooms.</li>
-<li>Secret rooms with option to voice group call.</li>
-<li>Private chat with option to voice call.</li>
+<li>Most commons theme rooms.</li> 
+<li>Secret rooms.</li><!-- 
+<li>Private chat with option to voice call.</li> -->
 <li>Emojies :) :smile:</li>
 </ul><br>
 
 <h3>Game:</h3><br>
 <ul>
 <li>Explain the word.</li>
+<li>Hangman.</li>
 </ul><br>
 
 <h5>And more in construction... <span id="sp_join_us" onclick="mostrar_sign_up()">Join us!</span></h5><br>   
