--- a/client/home/home.html
+++ b/client/home/home.html
@@ -2,9 +2,9 @@
 fecha: 16-09-18, 18-09
 -->
 
-<!-- efectos navidad -->
+<!-- efectos navidad 
  <script type="text/javascript" src="/scripts/snow.js"></script> 
-
+-->
 <style>
 /*style head..*/
 
