--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html ng-app="la_App">
-<!-- 
-fecha: 16-09-18
+<!--
+fecha: 14-01-19    
 -->
   <head>
   
 <!-- 1c.. heroku -->  
-<!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110169179-2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -14,10 +14,10 @@ fecha: 16-09-18
   gtag('js', new Date());
 
   gtag('config', 'UA-110169179-2');
-</script>    
+</script>    -->
     
 <!-- glitch.. -->    
-<!-- Global site tag (gtag.js) - Google Analytics 
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110169179-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -25,7 +25,7 @@ fecha: 16-09-18
   gtag('js', new Date());
 
   gtag('config', 'UA-110169179-1');
-</script>  -->
+</script>
   
   
   
@@ -103,6 +103,64 @@ body{
   
 /*..style basic page*/
 </style>  
+    
+<style>
+/*estilos compacto con clases*/
+  
+/* pos_abs con top y bottom left right para adaptar medida*/
+.flex_col {display: -webkit-flex; -webkit-flex-direction:column;display:flex; flex-direction:column}
+.flex_row {display: -webkit-flex; -webkit-flex-direction:row;display:flex; flex-direction:row}
+.blo {display:block}
+.inl_blo {display:inline-block}
+
+.cen {text-align:center; justify-content:center; align-items:center}
+.ver {vertical-align:middle}
+.ali_cen {text-align:center; align-items:center}
+
+.bor {border:1px dashed;}
+.bor_r {border-radius:5px} .bor_r5000 {border-radius:5px 0 0 0} .bor_r0500 {border-radius:0 5px 0 0}
+.bor_r50 {border-radius:50%}
+.bor_s {box-shadow: 0 0 5px #444}
+.bor_bot {border-bottom:1px solid black}
+.bor_1p_grey {border: 1px solid grey} .bor_1p_bla {border:1px solid black}
+
+.ove_y {overflow-y:auto}
+.wor_wra {word-wrap:break-word}
+
+.w100 {width:100%} .w90 {width:90%} .w80 {width:80%} .w70 {width:70%} .w50 {width:50%} .w30 {width:30%} .w20 {width:20%} .w10 {width:10%}
+.w50p {width:50px} .w30p {width:30px} .max_w600p {max-width:600px}
+.h100 {height: 100%} .h60 {height:60%} .h50 {height:50%} 
+.h50p {height:50px} .h30p {height:30px} 
+
+.cur_mov {cursor:move} .cur_poi {cursor:pointer}
+
+.bac_col_97d {background-color: #9370db} .bac_col_bfd {background-color: #ffdab9}
+.bac_col_fff {background-color: #fff0f5} .bac_col_438 {background-color: #433d8b}
+.bac_col_285 {background-color:#2e8b57} .bac_col_800 {background-color:#800000}
+.bac_col_db8 {background-color:#deb887} .bac_col_fa7 {background-color:#ffa07a}
+.bac_col_whi {background-color:white} .bac_col_bla {background-color:black}
+.bac_rgba_7 {background:rgba(0,0,0,0.7)}
+.bac_col_db82 {background-color:#d2b48c}
+.bac_col_345 {background-color:#34495e} .bac_col_ccc {background-color:#ccc}
+  
+
+.col_whi {color:white} .col_yel {color:yellow} .col_bla {color:black} .col_gre {color:grey}
+.col_244 {color:#2f4f4f} .col_345 {color:#34495e}
+
+.fon_ari {font-family:arial} .fon_bol {font-weight:bold}
+.fon_15p {font-size:15px}
+
+.pos_abs {position:absolute} .pos_absi {position:absolute !important} .pos_rel {position:relative}
+.flo_rig {float:right}
+
+.bot_0p {bottom:0px} .bot_30p {bottom:30px}
+.top_0p {top:0px} .top_10 {top:10%} .top_30p {top:30px} .top_50p {top:50px}
+.rig_0p {right:0px} .rig_30p {right:30px} .rig_30 {right:30%} .rig_20p {right:20px} .rig_10p {right:10px}
+.lef_0p {left:0px} .lef_10 {left:10%} .lef_10p {left:10px}
+  
+.al_frente{z-index:100;}
+  
+</style>    
   
  
 </head>
@@ -125,8 +183,7 @@ body{
 
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
-<link rel="stylesheet"
- href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
