--- a/client/index.html
+++ b/client/index.html
@@ -14,10 +14,10 @@ fecha: 14-01-19
   gtag('js', new Date());
 
   gtag('config', 'UA-110169179-2');
-</script>    -->
+</script>    
     
 <!-- glitch.. -->    
-<!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110169179-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -25,7 +25,7 @@ fecha: 14-01-19
   gtag('js', new Date());
 
   gtag('config', 'UA-110169179-1');
-</script>
+</script> -->
   
   
   
