--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@ fecha: 14-01-19
   <head>
   
 <!-- 1c.. heroku -->  
-<!-- Global site tag (gtag.js) - Google Analytics 
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110169179-2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
