--- a/client/index.html
+++ b/client/index.html
@@ -108,11 +108,29 @@ body{
 /*estilos compacto con clases*/
   
 /* pos_abs con top y bottom left right para adaptar medida*/
+.pos_abs,.pos_a {position:absolute} .pos_absi,.pos_a_i {position:absolute !important} .pos_rel,.pos_r {position:relative}
+.flo_rig {float:right}
+  
+.inl_blo {display:inline-block}  
+  
 .flex_col {display: -webkit-flex; -webkit-flex-direction:column;display:flex; flex-direction:column}
 .flex_row {display: -webkit-flex; -webkit-flex-direction:row;display:flex; flex-direction:row}
 .blo {display:block}
-.inl_blo {display:inline-block}
 
+.w100,.w {width:100%} .w90 {width:90%} .w80 {width:80%} .w70 {width:70%} .w50 {width:50%} .w30 {width:30%} .w20 {width:20%} .w10 {width:10%}
+.w50p {width:50px} .w30p {width:30px} .max_w600p {max-width:600px}
+.h100,.h {height: 100%} .h60 {height:60%} .h50 {height:50%} 
+.h50p {height:50px} .h30p {height:30px}   
+
+.bot_0p,.bot {bottom:0px} .bot_30p {bottom:30px}
+.top_0p,.top {top:0px} .top_10 {top:10%} .top_30p {top:30px} .top_50p {top:50px}
+.rig_0p,.rig {right:0px} .rig_30p {right:30px} .rig_30 {right:30%} .rig_20p {right:20px} .rig_10p {right:10px}
+.lef_0p,.lef {left:0px} .lef_10 {left:10%} .lef_10p {left:10px}
+  
+.al_frente{z-index:100;}  
+
+  
+.cen_v {position:absolute;top:50%;left:50%;transform: translate(-50%, -50%);}  
 .cen {text-align:center; justify-content:center; align-items:center}
 .ver {vertical-align:middle}
 .ali_cen {text-align:center; align-items:center}
@@ -127,39 +145,25 @@ body{
 .ove_y {overflow-y:auto}
 .wor_wra {word-wrap:break-word}
 
-.w100 {width:100%} .w90 {width:90%} .w80 {width:80%} .w70 {width:70%} .w50 {width:50%} .w30 {width:30%} .w20 {width:20%} .w10 {width:10%}
-.w50p {width:50px} .w30p {width:30px} .max_w600p {max-width:600px}
-.h100 {height: 100%} .h60 {height:60%} .h50 {height:50%} 
-.h50p {height:50px} .h30p {height:30px} 
-
-.cur_mov {cursor:move} .cur_poi {cursor:pointer}
-
-.bac_col_97d {background-color: #9370db} .bac_col_bfd {background-color: #ffdab9}
-.bac_col_fff {background-color: #fff0f5} .bac_col_438 {background-color: #433d8b}
-.bac_col_285 {background-color:#2e8b57} .bac_col_800 {background-color:#800000}
-.bac_col_db8 {background-color:#deb887} .bac_col_fa7 {background-color:#ffa07a}
-.bac_col_whi {background-color:white} .bac_col_bla {background-color:black}
-.bac_rgba_7 {background:rgba(0,0,0,0.7)}
-.bac_col_db82 {background-color:#d2b48c}
-.bac_col_345 {background-color:#34495e} .bac_col_ccc {background-color:#ccc}
-  
-
-.col_whi {color:white} .col_yel {color:yellow} .col_bla {color:black} .col_gre {color:grey}
-.col_244 {color:#2f4f4f} .col_345 {color:#34495e}
-
 .fon_ari {font-family:arial} .fon_bol {font-weight:bold}
 .fon_15p {font-size:15px}
 
-.pos_abs {position:absolute} .pos_absi {position:absolute !important} .pos_rel {position:relative}
-.flo_rig {float:right}
+.cur_mov {cursor:move} .cur_poi {cursor:pointer}
 
-.bot_0p {bottom:0px} .bot_30p {bottom:30px}
-.top_0p {top:0px} .top_10 {top:10%} .top_30p {top:30px} .top_50p {top:50px}
-.rig_0p {right:0px} .rig_30p {right:30px} .rig_30 {right:30%} .rig_20p {right:20px} .rig_10p {right:10px}
-.lef_0p {left:0px} .lef_10 {left:10%} .lef_10p {left:10px}
+.bac_col_97d,.bac_col_bstlk {background-color: #9370db} .bac_col_bfd,.bac_col_con_chat_g {background-color: #ffdab9}
+.bac_col_fff,.bac_col_usr_chat_g {background-color: #fff0f5} .bac_col_438,.bac_col_crr_chat_g {background-color: #433d8b}
+.bac_col_285,.bac_col_tit_chat_prv {background-color:#2e8b57} .bac_col_800,.bac_col_crr_chat_p {background-color:#800000}
+.bac_col_db8,.bac_col_con_chat_prv {background-color:#deb887} .bac_col_fa7,.bac_col_usr_chat_prv {background-color:#ffa07a}
+.bac_col_whi {background-color:white} .bac_col_bla {background-color:black}
+.bac_rgba_7,.bac_col_desv {background:rgba(0,0,0,0.7)}
+.bac_col_db82,.bac_col_gme {background-color:#d2b48c}
+.bac_col_345,.bac_col_tbl_u {background-color:#34495e} .bac_col_ccc,.bac_col_prf_u {background-color:#ccc}
   
-.al_frente{z-index:100;}
-  
+
+.col_whi {color:white} .col_yel {color:yellow} .col_bla {color:black} .col_gre {color:grey}
+.col_244,.col_lrn {color:#2f4f4f} .col_345,.col_tbl_u {color:#34495e}
+
+
 </style>    
   
  
