--- a/client/directive/edit.html
+++ b/client/directive/edit.html
@@ -6,40 +6,49 @@
 #ta_abt_me{width:173px;}  
 </style>
 
-<form id="fm_edt">
+<form
+id="fm_edt">
 
-<div id="dv_msg_edt" ng-show="message">{{message}}</div>  
+<div
+id="dv_msg_edt" ng-show="message">{{message}}</div>  
   
-<img id="ig_prf_edi" class="cl_ig_prf_avtr"
-     name="avatar"
-     ng-src="{{user.avatar}}" alt="avatar"><br>
+<img
+id="ig_prf_edi" class="cl_ig_prf_avtr"
+name="avatar"
+ng-src="{{user.avatar}}" alt="avatar"><br>
 
 Change your avatar:<br>
-<input type="file" id="in_fl_img"
-       onchange="cargar_img()"><br>
+<input
+type="file" id="in_fl_img"
+onchange="cargar_img()"><br>
   
 First Name:<br>
-<input type="text"
-       ng-model="user.firstname" name="firstname"
-       value="{{user.firstname}}"><br>
+<input
+type="text"
+ng-model="user.firstname" name="firstname"
+value="{{user.firstname}}"><br>
 
 Last Name:<br>
-<input type="text"
-       name="lastname" ng-model="user.lastname"
-       value="{{user.lastname}}"><br>
+<input
+type="text"
+name="lastname" ng-model="user.lastname"
+value="{{user.lastname}}"><br>
 
 Gender: 
-<input type="radio"
-       name="gender" ng-model="user.gender"       
-       value="M"> Male
-<input type="radio"
-       name="gender" ng-model="user.gender"
-       value="F"> Female<br>
+<input
+type="radio"
+name="gender" ng-model="user.gender"       
+value="M"> Male
+<input
+type="radio"
+name="gender" ng-model="user.gender"
+value="F"> Female<br>
 
 Age:<br>
-<input type="number"
-       name="age" ng-model="user.age"      
-       value="{{user.age}}" required><br>
+<input
+type="number"
+name="age" ng-model="user.age"      
+value="{{user.age}}" required><br>
 
 Country:<br>
 <select name="country" ng-model="user.country">
@@ -294,22 +303,26 @@ Country:<br>
 </select><br>
 
 Learning:<br>
-<input type="text"
-       name="learning" ng-model="user.learning"
-       value="{{user.learning}}"><br>
+<input
+type="text"
+name="learning" ng-model="user.learning"
+value="{{user.learning}}"><br>
 
 Speaks:<br>
-<input type="text"
-       name="speaks" ng-model="user.speaks"
-       value="{{user.speaks}}"><br>
+<input
+type="text"
+name="speaks" ng-model="user.speaks"
+value="{{user.speaks}}"><br>
 
 About me:<br>
-<textarea name="about_me" id="ta_abt_me"
-          ng-model="user.about_me" rows="4"
-          value="{{user.about_me}}"></textarea><br>  
+<textarea
+name="about_me" id="ta_abt_me"
+ng-model="user.about_me" rows="4"
+value="{{user.about_me}}"></textarea><br>  
 
 
-<input type="submit"
-       value="Update" ng-click="editar_profile(user)">
+<input
+type="submit"
+value="Update" ng-click="editar_profile(user)">
 
 </form>
