--- a/client/home/home.html
+++ b/client/home/home.html
@@ -206,9 +206,9 @@ cursor:pointer;}
 
 <h2 id="h2_welcome" class="fon_ari">Welcome to BesTalk</h2><br>
   
-<!-- 2c.. heroku -->    
+<!-- 2c.. heroku    
 <h1 id="h1_info" class="gree">First release running on: <a href="https://bestalk.herokuapp.com" target="_self">BesTalk.herokuapp.com</a></h1><br>
-<h3>this the Beta Version:</h3><br>  
+<h3>this the Beta Version:</h3><br>  --> 
   
 <h3 id="h3_msg" class="">A language exchange website in development which will bring us the best of SharedLingo, SharedTalk and LiveMocha...</h3><br>
   
