arreglando clases en chat, read y learn

--- a/client/profile/profile.html
+++ b/client/profile/profile.html
@@ -1294,3 +1294,5 @@ dv_ng_view.appendChild(dv);
 <script src="/scripts/socketdsp.js"></script>  
 
 <script src="/scripts/hangman.js"></script> 
+
+<link rel="stylesheet" href="/styles/chat.css">
