privacy policy, dentro

--- a/client/home/home.html
+++ b/client/home/home.html
@@ -1,4 +1,5 @@
-  
+<!-- home... -->
+
 <!-- efectos navidad 
  <script type="text/javascript" src="/scripts/snow.js"></script> -->
 
@@ -277,7 +278,6 @@ ng-click="entrar_sign_up()">Sign Up</button>
 style="
 background-color:black;
 color:white;
-text-align:center;
 ">
 
 <span>Made with 
@@ -286,6 +286,21 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR
 title="Potato" width="24" height="24">
 by BesTalk Team</span> 
 
+  
+<!-- 
+href="https://bestalk-test.glitch.me/privacy_policy" 
+href="https://bestalk.herokuapp.com/privacy_policy" 
+-->  
+<a 
+href="https://bestalk-test.glitch.me/privacy_policy"   
+target="_blank"
+style="
+position:absolute;
+top:5px;
+right:10px;
+color:grey;
+">Privacy</a>  
+  
 </div><!-- dv pie -->
 
 
@@ -336,3 +351,4 @@ dv_login_sign_up_scr.style.display="none";
 */
 </script>
 
+<!-- ...home -->
