--- a/client/profile/profile.html
+++ b/client/profile/profile.html
@@ -1,3 +1,4 @@
+<!-- profile.html... -->
 
 <style>
 /* estilo local */
@@ -1296,3 +1297,5 @@ dv_ng_view.appendChild(dv);
 <script src="/scripts/hangman.js"></script> 
 
 <link rel="stylesheet" href="/styles/chat.css">
+
+<!-- ...profile.html -->
