--- a/client/home/home.html
+++ b/client/home/home.html
@@ -292,7 +292,7 @@ href="https://bestalk-test.glitch.me/privacy_policy"
 href="https://bestalk.herokuapp.com/privacy_policy" 
 -->  
 <a 
-href="https://bestalk-test.glitch.me/privacy_policy"   
+href="https://bestalk.herokuapp.com/privacy_policy"   
 target="_blank"
 style="
 position:absolute;
