img_profile_edi, last connected users

--- a/client/profile/profile.html
+++ b/client/profile/profile.html
@@ -1289,7 +1289,7 @@ can.width=50;
 can.height=50;
 var coc= can.getContext("2d");
 coc.drawImage(this,0,0, can.width,can.height);
-ig_profile_edi.src= can.toDataURL("image/png");
+img_profile_edi.src= can.toDataURL("image/png");
 }//onload img provisional
 img_provisional.src= reader.result;
 }//onloadend reader
