--- a/client/profile/profile.html
+++ b/client/profile/profile.html
@@ -174,14 +174,14 @@ color:#2f4f4f;
 border-bottom:1px solid black;
 }
 
-#tbl_users
+#tbl_users, #tbl_users_lc
 {
 width:100%;
 border-radius:5px;
 background-color:#34495e;
 }
 
-#tbl_users>caption
+#tbl_users>caption, #tbl_users_lc>caption
 {
 color:#34495e;
 font-family:arial;
@@ -824,6 +824,12 @@ value="Slide in" onclick="ir_a_secret_room()">
 <tbody id="tbl_users_bd">
 </tbody>
 </table>
+  
+<table id="tbl_users_lc" style="border-collapse:collapse">
+<caption>Last 5 Connected Users</caption>
+<tbody id="tbl_users_lc_bd">
+</tbody>
+</table>  
       
 </div><!-- dv chat user -->  
 
