corr last 5 connected users, typing pencil

--- a/client/profile/profile.html
+++ b/client/profile/profile.html
@@ -827,6 +827,11 @@ value="Slide in" onclick="ir_a_secret_room()">
   
 <table id="tbl_users_lc" style="border-collapse:collapse">
 <caption>Last 5 Connected Users</caption>
+<thead>
+<tr>
+<th>Avatar</th><th>Name</th><th>Gender</th><th>Age</th><th>Country</th><th>Learning</th><th>Speaks</th>
+</tr>
+</thead>
 <tbody id="tbl_users_lc_bd">
 </tbody>
 </table>  
