--- a/client/directive/edit.html
+++ b/client/directive/edit.html
@@ -322,7 +322,7 @@ value="Update" ng-click="editar_profile(user)">
 
 function cargar_img()
 {
-console.log("carga img")
+console.log("a cargar_img")
 var reader= new FileReader();
 reader.onloadend= function()
 {
