--- a/client/home/home.html
+++ b/client/home/home.html
@@ -251,7 +251,7 @@ onclick="mostrar_log_sign(dv_login)">Log in!</span></p>
 
 function mostrar_log_sign(dvx)
 {
-console.log("muestra dv log sign:"+dvx.id)
+console.log("a mostrar_log_sign:"+dvx.id)
 if(dvx.id == "dv_login")
 {
 dv_login.style.display= "" 
@@ -266,7 +266,7 @@ dv_login.style.display= "none"
 
 function validar_password()
 {
-console.log("valida repeticion de password")
+console.log("a validar_password repeticion")
 if(in_pw.value == in_cpw.value)
 {
 return true;
