--- a/client/index.html
+++ b/client/index.html
@@ -148,7 +148,7 @@ background-color:white;}
 .bac_whi {background-color:white} .bac_bla {background-color:black}
 .bac_rgba_7,.bac_col_desvanecido {background:rgba(0,0,0,0.7)}
 .bac_db82,.bac_col_gme {background-color:#d2b48c}
-.bac_345,.bac_col_tbl_u {background-color:#34495e} .bac_ccc,.bac_col_prf_u {background-color:#ccc}
+.bac_345, {background-color:#34495e} .bac_ccc,.bac_col_prf_u {background-color:#ccc}
 .bac_col_bac_hom {background-color:#e0ccb7}
   
 
@@ -193,6 +193,8 @@ background-color:white;}
 .bac_col_bestalk {background-color: #9370db}
 .bac_col_desvanecido {background:rgba(0,0,0,0.7)}
 .bac_col_emerg_profile {background-color: #ccc}
+.bac_col_tbl_u {background-color:#34495e}
+.bac_col_tbl_u_desv {background: rgba(52,73,94,0.3)}
   
 .cur_poi {cursor: pointer} .cur_mov {cursor: move}
   
