--- a/client/index.html
+++ b/client/index.html
@@ -109,16 +109,16 @@ background-color:white;}
 .jus_cen {justify-content:center} .ali_i_cen {align-items:center}  
   
 /*tamaño*/
-.w {width:100%} .w90 {width:90%} .w80 {width:80%} .w70 {width:70%} .w_ {width:50%} .w30 {width:30%} .w20 {width:20%} .w10 {width:10%}
-.w50p {width:50px} .w30p {width:30px} .max_w600p {max-width:600px}
+.w {width:100%} .w90 {width:90%} .w80 {width:80%} .w70 {width:70%} .w60 {width:60%} .w_ {width:50%} .w30 {width:30%} .w20 {width:20%} .w10 {width:10%}
+.w50p {width:50px} .w30p {width:30px} .max_w600p {max-width:600px} .w320p {width: 320px}
 .h {height: 100%} .h60 {height:60%} .h_ {height:50%} 
-.h50p {height:50px} .h30p {height:30px}   
+.h50p {height:50px} .h30p {height:30px} .h270p {height: 270px} 
 .wh {width:100%;height:100%}
 
 .bot {bottom:0px} .bot_ {bottom:50%} .bot_30p {bottom:30px}
-.top {top:0px} .top_ {top:50%} .top_10 {top:10%} .top_30p {top:30px} .top_50p {top:50px}
+.top {top:0px} .top_ {top:50%} .top_20 {top:20%} .top_10 {top:10%}  .top_30p {top:30px} .top_50p {top:50px}
 .rig {right:0px} .rig_ {right:50%} .rig_30p {right:30px} .rig_30 {right:30%} .rig_20p {right:20px} .rig_10p {right:10px}
-.lef {left:0px} .lef_ {left:50%} .lef_10 {left:10%} .lef_10p {left:10px}
+.lef {left:0px} .lef_ {left:50%} .lef_20 {left:20%} .lef_10 {left:10%} .lef_10p {left:10px}
 .t-b {top:0px;bottom:0px} .l-r {left:0px;right:0px} .ltrb {left:0px;top:0px;right:0px;bottom:0px}
   
 .marg {margin:0px}
@@ -207,6 +207,8 @@ background-color:white;}
 border: 1px solid grey;
 border-radius: 5px;
 }  
+  
+.bor_r5500 {border-radius:5px 5px 0 0}
   
 /* ...index... */
 
